--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Cusos gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de html5 com css3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum molestiae nobis expedita enim, earum corrupti perspiciatis, esse vel blanditiis, adipisci ea? Autem error, asperiores harum officiis veritatis temporibus suscipit nostrum!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti illum velit doloribus nobis inventore at alias, vel tenetur nihil impedit pariatur suscipit facilis cum sit. Ab quia vitae sequi dolorem!</p>
         </article>
     </main>
 </body>
